--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Sacramento:400&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap);
 
 
@@ -8,28 +10,28 @@ body {
   font-family: Rubik;
 }
 .display-1 {
-  font-family: 'Rubik', sans-serif;
-  font-size: 4.25rem;
+  font-family: 'Sacramento', handwriting;
+  font-size: 5.4rem;
   font-display: swap;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 6.8rem;
+  font-size: 8.64rem;
 }
 .display-2 {
-  font-family: 'Rubik', sans-serif;
-  font-size: 3rem;
+  font-family: 'Raleway', sans-serif;
+  font-size: 2rem;
   font-display: swap;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.8rem;
+  font-size: 3.2rem;
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-display: swap;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.92rem;
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
@@ -40,7 +42,7 @@ body {
   font-size: 2.4rem;
 }
 .display-7 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 1rem;
   font-display: swap;
 }
@@ -54,19 +56,19 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 3.4rem;
-    font-size: calc( 2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 4.32rem;
+    font-size: calc( 2.54rem + (5.4 - 2.54) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (2.54rem + (5.4 - 2.54) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.4rem;
-    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.6rem;
+    font-size: calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 0.8rem;
-    font-size: calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.96rem;
+    font-size: calc( 1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
     font-size: 1.2rem;
@@ -546,7 +548,7 @@ a:hover {
   display: none;
 }
 .form-control {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 1rem;
   font-display: swap;
 }
@@ -712,12 +714,12 @@ section.lazy-placeholder:after {
 }
 .cid-s2OPMqQRyW .navbar {
   padding: .5rem 0;
-  background: #232323;
+  background: #cc2952;
   transition: none;
   min-height: 77px;
 }
 .cid-s2OPMqQRyW .navbar-dropdown.bg-color.transparent.opened {
-  background: #232323;
+  background: #cc2952;
 }
 .cid-s2OPMqQRyW a {
   font-style: normal;
@@ -808,7 +810,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-s2OPMqQRyW .dropdown .dropdown-menu {
-  background: #232323;
+  background: #cc2952;
   visibility: hidden;
   display: block;
   position: absolute;
@@ -1111,15 +1113,25 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-s2TUBHIbqE {
-  padding-top: 90px;
-  padding-bottom: 60px;
+  padding-top: 135px;
+  padding-bottom: 135px;
   background-image: url("../../../assets/images/background4.jpg");
 }
+.cid-s2TUBHIbqE .mbr-text,
+.cid-s2TUBHIbqE .mbr-section-btn {
+  color: #cc2952;
+}
+.cid-s2TUBHIbqE H3 {
+  color: #232323;
+}
+.cid-s2TUBHIbqE H1 {
+  color: #232323;
+}
 .cid-s2T5Tshbyz {
-  padding-top: 105px;
-  padding-bottom: 60px;
-  background-color: #4f4943;
-  background: linear-gradient(0deg, #4f4943, #82786e);
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+  background: linear-gradient(0deg, #efefef, #cebfaf);
 }
 .cid-s2T5Tshbyz .nav-tabs {
   -webkit-justify-content: center;
@@ -1130,24 +1142,24 @@ section.lazy-placeholder:after {
 }
 .cid-s2T5Tshbyz .nav-tabs .nav-link {
   box-sizing: border-box;
-  color: #ffffff;
+  color: #cc2952;
   font-style: normal;
   font-weight: 500;
   border-radius: 3px;
-  border: 1px solid #ffffff;
+  border: 1px solid #cc2952;
   padding: 1rem 3rem;
   margin: 0.4rem .8rem !important;
   transition: all .5s;
 }
 .cid-s2T5Tshbyz .nav-tabs .nav-link:hover {
-  background-color: #4f4943;
+  background-color: #cc2952;
 }
 .cid-s2T5Tshbyz .nav-tabs .nav-link.active {
   font-weight: 500;
   color: #ffffff;
   font-style: normal;
   border: none;
-  background: #4f4943;
+  background: #cc2952;
 }
 .cid-s2T5Tshbyz .nav-tabs .nav-link.active:hover {
   border: none;
@@ -1159,12 +1171,12 @@ section.lazy-placeholder:after {
   text-align: center;
 }
 .cid-s2T5Tshbyz P {
-  color: #ffffff;
+  color: #465052;
 }
 .cid-s2OYnGgysB {
-  padding-top: 0px;
+  padding-top: 15px;
   padding-bottom: 0px;
-  background-color: #232323;
+  background-color: #efefef;
 }
 .cid-s2OYnGgysB p {
   margin-bottom: 0;
@@ -1198,21 +1210,24 @@ section.lazy-placeholder:after {
   padding-bottom: 2rem;
 }
 .cid-s2OYnGgysB .mbr-section-title {
-  color: #efefef;
+  color: #232323;
 }
 .cid-s2TDtZQpdu {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #232323;
+  background-color: #efefef;
 }
 .cid-s2TDtZQpdu .mbr-text,
 .cid-s2TDtZQpdu blockquote {
   color: #767676;
 }
+.cid-s2TDtZQpdu DIV {
+  color: #ff3366;
+}
 .cid-s2P0rd9fiW {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #232323;
+  background-color: #cccccc;
 }
 .cid-s2P0rd9fiW .mbr-iconfont {
   font-size: 48px;
@@ -1282,19 +1297,19 @@ section.lazy-placeholder:after {
   }
 }
 .cid-s2P0rd9fiW H2 {
-  color: #ffffff;
+  color: #7f1933;
 }
 .cid-s2P0rd9fiW .icon-block,
 .cid-s2P0rd9fiW .icon-block .icon-block__title {
-  color: #ffffff;
+  color: #cc2952;
 }
 .cid-s2P0rd9fiW H5 {
-  color: #efefef;
+  color: #232323;
 }
 .cid-s2TnfIUaSL {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #232323;
+  background-color: #635a51;
 }
 .cid-s2TnfIUaSL .testimonial-text {
   font-style: italic;
