--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1224,91 +1224,33 @@ section.lazy-placeholder:after {
 .cid-s2TDtZQpdu DIV {
   color: #ff3366;
 }
-.cid-s2P0rd9fiW {
+.cid-s2U6XvPc07 {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #cccccc;
 }
-.cid-s2P0rd9fiW .mbr-iconfont {
-  font-size: 48px;
-  padding-right: 1rem;
+.cid-s2U6XvPc07 .title {
+  margin-bottom: 2rem;
 }
-.cid-s2P0rd9fiW .icon-block {
-  margin-bottom: 10px;
-}
-.cid-s2P0rd9fiW .icon-block .icon-block__icon {
-  display: inline-block;
-  vertical-align: middle;
-}
-.cid-s2P0rd9fiW .icon-block .icon-block__title {
-  display: inline-block;
-  vertical-align: middle;
-  margin-bottom: 0;
-  line-height: 1;
-  font-style: italic;
-}
-.cid-s2P0rd9fiW .mbr-text {
+.cid-s2U6XvPc07 .mbr-section-subtitle {
   color: #767676;
 }
-.cid-s2P0rd9fiW textarea.form-control {
-  min-height: 100px;
-}
-.cid-s2P0rd9fiW a:not([href]):not([tabindex]) {
+.cid-s2U6XvPc07 a:not([href]):not([tabindex]) {
   color: #fff;
   border-radius: 3px;
 }
-.cid-s2P0rd9fiW .google-map {
-  height: 31rem;
-  position: relative;
+.cid-s2U6XvPc07 a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
 }
-.cid-s2P0rd9fiW .google-map iframe {
-  height: 100%;
-  width: 100%;
+.cid-s2U6XvPc07 textarea.form-control {
+  min-height: 188px;
 }
-.cid-s2P0rd9fiW .google-map [data-state-details] {
-  color: #6b6763;
-  font-family: Montserrat;
-  height: 1.5em;
-  margin-top: -0.75em;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
-.cid-s2P0rd9fiW .google-map[data-state] {
-  background: #e9e5dc;
-}
-.cid-s2P0rd9fiW .google-map[data-state="loading"] [data-state-details] {
-  display: none;
-}
-@media (max-width: 767px) {
-  .cid-s2P0rd9fiW h2 {
-    padding-top: 2rem;
-  }
-}
-@media (min-width: 768px) {
-  .cid-s2P0rd9fiW .container > .row > .col-md-6:first-child {
-    padding-right: 30px;
-  }
-  .cid-s2P0rd9fiW .container > .row > .col-md-6:last-child {
-    padding-left: 30px;
-  }
-}
-.cid-s2P0rd9fiW H2 {
-  color: #7f1933;
-}
-.cid-s2P0rd9fiW .icon-block,
-.cid-s2P0rd9fiW .icon-block .icon-block__title {
-  color: #cc2952;
-}
-.cid-s2P0rd9fiW H5 {
+.cid-s2U6XvPc07 H2 {
   color: #232323;
 }
 .cid-s2TnfIUaSL {
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #635a51;
 }
 .cid-s2TnfIUaSL .testimonial-text {
