--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -882,7 +882,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #767676;
+  background-color: #ffffff;
 }
 .cid-s2OPMqQRyW button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1178,6 +1178,30 @@ section.lazy-placeholder:after {
 .cid-s2TDtZQpdu DIV {
   color: #ff3366;
 }
+.cid-s2U6XvPc07 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #cccccc;
+}
+.cid-s2U6XvPc07 .title {
+  margin-bottom: 2rem;
+}
+.cid-s2U6XvPc07 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-s2U6XvPc07 a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-s2U6XvPc07 a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-s2U6XvPc07 textarea.form-control {
+  min-height: 188px;
+}
+.cid-s2U6XvPc07 H2 {
+  color: #232323;
+}
 .cid-s2T5Tshbyz {
   padding-top: 60px;
   padding-bottom: 0px;
@@ -1223,30 +1247,6 @@ section.lazy-placeholder:after {
 }
 .cid-s2T5Tshbyz P {
   color: #465052;
-}
-.cid-s2U6XvPc07 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #cccccc;
-}
-.cid-s2U6XvPc07 .title {
-  margin-bottom: 2rem;
-}
-.cid-s2U6XvPc07 .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-s2U6XvPc07 a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
-}
-.cid-s2U6XvPc07 a.btn-white:not([href]):not([tabindex]) {
-  color: #333;
-}
-.cid-s2U6XvPc07 textarea.form-control {
-  min-height: 188px;
-}
-.cid-s2U6XvPc07 H2 {
-  color: #232323;
 }
 .cid-s2TnfIUaSL {
   padding-top: 30px;
