--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -19,11 +19,11 @@ body {
 }
 .display-2 {
   font-family: 'Raleway', sans-serif;
-  font-size: 2rem;
+  font-size: 2.4rem;
   font-display: swap;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 3.2rem;
+  font-size: 3.84rem;
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
@@ -43,11 +43,11 @@ body {
 }
 .display-7 {
   font-family: 'Raleway', sans-serif;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-display: swap;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.28rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -61,9 +61,9 @@ body {
     line-height: calc( 1.4 * (2.54rem + (5.4 - 2.54) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 1.6rem;
-    font-size: calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.92rem;
+    font-size: calc( 1.49rem + (2.4 - 1.49) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.49rem + (2.4 - 1.49) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.96rem;
@@ -549,11 +549,11 @@ a:hover {
 }
 .form-control {
   font-family: 'Raleway', sans-serif;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-display: swap;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.28rem;
 }
 blockquote {
   border-color: #149dcc;
@@ -1113,8 +1113,6 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-s2TUBHIbqE {
-  padding-top: 135px;
-  padding-bottom: 135px;
   background-image: url("../../../assets/images/background4.jpg");
 }
 .cid-s2TUBHIbqE .mbr-text,
@@ -1128,7 +1126,7 @@ section.lazy-placeholder:after {
   color: #232323;
 }
 .cid-s2OYnGgysB {
-  padding-top: 15px;
+  padding-top: 60px;
   padding-bottom: 0px;
   background-color: #efefef;
 }
@@ -1167,7 +1165,7 @@ section.lazy-placeholder:after {
   color: #232323;
 }
 .cid-s2TDtZQpdu {
-  padding-top: 0px;
+  padding-top: 30px;
   padding-bottom: 0px;
   background-color: #efefef;
 }
@@ -1177,6 +1175,17 @@ section.lazy-placeholder:after {
 }
 .cid-s2TDtZQpdu DIV {
   color: #ff3366;
+}
+.cid-s35SSWpZ0X {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-image: url("../../../assets/images/mbr-1920x1275.jpg");
+}
+.cid-s35SSWpZ0X .mbr-section-subtitle {
+  color: #cc2952;
+}
+.cid-s35SSWpZ0X .btn {
+  margin: 0 0 .5rem 0;
 }
 .cid-s2U6XvPc07 {
   padding-top: 90px;
