create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1217,6 +1217,9 @@ section.lazy-placeholder:after {
 .cid-s36e2Z6rKe .panel-text {
   color: #cc2952;
 }
+.cid-s36e2Z6rKe H2 {
+  color: #cc2952;
+}
 .cid-s35SSWpZ0X {
   padding-top: 0px;
   padding-bottom: 120px;
