--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -130,8 +130,8 @@ body {
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #ff3366 !important;
-  border-color: #ff3366 !important;
+  background-color: #cc2952 !important;
+  border-color: #cc2952 !important;
   color: #ffffff !important;
 }
 .btn-secondary:hover,
@@ -139,14 +139,14 @@ body {
 .btn-secondary.focus,
 .btn-secondary.active {
   color: #ffffff !important;
-  background-color: #e50039 !important;
-  border-color: #e50039 !important;
+  background-color: #8c1c38 !important;
+  border-color: #8c1c38 !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #e50039 !important;
-  border-color: #e50039 !important;
+  background-color: #8c1c38 !important;
+  border-color: #8c1c38 !important;
 }
 .btn-info,
 .btn-info:active {
@@ -294,22 +294,22 @@ body {
 .btn-secondary-outline,
 .btn-secondary-outline:active {
   background: none;
-  border-color: #cc0033;
-  color: #cc0033;
+  border-color: #771830;
+  color: #771830;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus,
 .btn-secondary-outline.active {
   color: #ffffff;
-  background-color: #ff3366;
-  border-color: #ff3366;
+  background-color: #cc2952;
+  border-color: #cc2952;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #ff3366 !important;
-  border-color: #ff3366 !important;
+  background-color: #cc2952 !important;
+  border-color: #cc2952 !important;
 }
 .btn-info-outline,
 .btn-info-outline:active {
@@ -429,7 +429,7 @@ body {
   color: #149dcc !important;
 }
 .text-secondary {
-  color: #ff3366 !important;
+  color: #cc2952 !important;
 }
 .text-success {
   color: #f7ed4a !important;
@@ -455,7 +455,7 @@ a.text-primary:focus {
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
-  color: #cc0033 !important;
+  color: #771830 !important;
 }
 a.text-success:hover,
 a.text-success:focus {
@@ -684,7 +684,7 @@ blockquote {
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
   color: #ffffff !important;
-  background: #ff3366 !important;
+  background: #cc2952 !important;
   box-shadow: none !important;
 }
 .lazy-bg {
@@ -1167,7 +1167,7 @@ section.lazy-placeholder:after {
 .cid-s2TDtZQpdu {
   padding-top: 30px;
   padding-bottom: 75px;
-  background-color: #efefef;
+  background-color: #ffffff;
 }
 .cid-s2TDtZQpdu .mbr-text,
 .cid-s2TDtZQpdu blockquote {
@@ -1255,11 +1255,38 @@ section.lazy-placeholder:after {
 .cid-s2U6XvPc07 H2 {
   color: #232323;
 }
+.cid-s2TnfIUaSL {
+  padding-top: 105px;
+  padding-bottom: 30px;
+  background-color: #82786e;
+}
+.cid-s2TnfIUaSL .testimonial-text {
+  font-style: italic;
+  font-weight: 300;
+}
+.cid-s2TnfIUaSL .mbr-author-name {
+  font-weight: bold;
+}
+.cid-s2TnfIUaSL .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+@media (max-width: 991px) {
+  .cid-s2TnfIUaSL .mbr-figure,
+  .cid-s2TnfIUaSL img {
+    max-height: 300px;
+    width: auto;
+    margin: auto;
+  }
+  .cid-s2TnfIUaSL .media-content {
+    padding-top: 1.5rem !important;
+  }
+}
 .cid-s2T5Tshbyz {
   padding-top: 60px;
   padding-bottom: 0px;
-  background-color: #cccccc;
-  background: linear-gradient(0deg, #cccccc, #efefef);
+  background-color: #4f4943;
+  background: linear-gradient(0deg, #4f4943, #82786e);
 }
 .cid-s2T5Tshbyz .nav-tabs {
   -webkit-justify-content: center;
@@ -1270,11 +1297,11 @@ section.lazy-placeholder:after {
 }
 .cid-s2T5Tshbyz .nav-tabs .nav-link {
   box-sizing: border-box;
-  color: #cc2952;
+  color: #efefef;
   font-style: normal;
   font-weight: 500;
   border-radius: 3px;
-  border: 1px solid #cc2952;
+  border: 1px solid #efefef;
   padding: 1rem 3rem;
   margin: 0.4rem .8rem !important;
   transition: all .5s;
@@ -1299,34 +1326,7 @@ section.lazy-placeholder:after {
   text-align: center;
 }
 .cid-s2T5Tshbyz P {
-  color: #465052;
-}
-.cid-s2TnfIUaSL {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #635a51;
-}
-.cid-s2TnfIUaSL .testimonial-text {
-  font-style: italic;
-  font-weight: 300;
-}
-.cid-s2TnfIUaSL .mbr-author-name {
-  font-weight: bold;
-}
-.cid-s2TnfIUaSL .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-}
-@media (max-width: 991px) {
-  .cid-s2TnfIUaSL .mbr-figure,
-  .cid-s2TnfIUaSL img {
-    max-height: 300px;
-    width: auto;
-    margin: auto;
-  }
-  .cid-s2TnfIUaSL .media-content {
-    padding-top: 1.5rem !important;
-  }
+  color: #ffffff;
 }
 .cid-s2ThtFuiGx {
   padding-top: 60px;
